feat: add optimistic locking